Fix regression on paragraph letter-spacing

--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -96,7 +96,7 @@ figure {
 
 p {
   font-family: var(--font-serif);
-  letter-spacing: -.25rem;
+  letter-spacing: -.025rem;
 }
 
 img {
